# pygridder

./: LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: testing.yml
ci/: requirements.txt  test_requirements.txt
examples/: pygridder-tutorial.ipynb
src/pygridder/: __init__.py  girdder.py
tests/: test_grid_mapping.py
tests/data/: discussion_areas.json  mapped_lines.npz  mapped_points.npz  mapped_polygons.npz  tornado_paths.json
