[project]
name = 'pygridder'
description = 'A package to grid point, line, or polygon data on a regular grid.'
authors = [
    {name = 'Patrick Marsh', email = 'patrick.marsh@noaa.gov'},
]
readme = 'README.md'
license = {file = 'LICENSE'}
dynamic = ['version']
requires-python = '>=3.11'
dependencies = [
    'numpy >= 2.0',
    'scikit-image',
    'scipy'
]

[project.optional-dependencies]
examples = [
    'matplotlib',
    'pyproj'
]
lint = [
    'flake8',
    'ruff',
    'pycodestyle',
    'pyflakes',
    'flake8-continuation',
    'flake8-copyright',
    'flake8-isort',
    'isort',
    'flake8-requirements',
    'pydocstyle'
]
test = [
    'pyproj',
    'pytest'
]

[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project.urls]
homepage = 'https://github.com/pmarshwx/pygridder'
repository = 'https://github.com/pmarshwx/pygridder'

[tool.isort]
line_length = 95
known_first_party = ['pygridder']
force_single_line = false
reverse_relative = true
use_parentheses = true
force_sort_within_sections = true
order_by_type = false
sort_relative_in_force_sorted_sections = true
combine_as_imports = true
combine_star = true

[tool.pytest.ini_options]
norecursedirs = 'build'

[tool.ruff]
line-length = 95
exclude = ['examples']

[tool.ruff.lint]
select = ['A', 'B', 'C', 'CPY001', 'D', 'E', 'E226', 'F', 'G', 'I', 'N', 'NPY', 'Q', 'R', 'S', 'SIM', 'T', 'U', 'W']
ignore = ['F405', 'I001', 'RET504', 'RET505', 'RET506', 'RET507', 'RUF100']
preview = true
explicit-preview-rules = true

[tool.ruff.lint.per-file-ignores]
'src/pygridder/__init__.py' = ['F401']

[tool.ruff.lint.flake8-copyright]
notice-rgx = '(?i)Copyright\s+(\(C\)\s+)?\d{4}'
author = 'Patrick Marsh'

[tool.ruff.lint.flake8-quotes]
inline-quotes = 'single'
multiline-quotes = 'double'

[tool.ruff.lint.isort]
known-first-party = ['pygridder']
force-single-line = false
relative-imports-order = 'closest-to-furthest'
force-sort-within-sections = true
order-by-type = false
combine-as-imports = true

[tool.ruff.lint.mccabe]
max-complexity = 61

[tool.ruff.lint.pydocstyle]
convention = 'numpy'

[tool.setuptools]
zip-safe = false

[tool.setuptools.dynamic]
version = {attr = 'pygridder.__version__'}

[tool.setuptools.packages.find]
where = ['src']